@@ -17,7 +17,6 @@
 package com.navercorp.pinpoint.batch;
 
 import com.navercorp.pinpoint.batch.common.BatchConfiguration;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -25,7 +24,9 @@ import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.TestPropertySource;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 
-import java.util.Arrays;
+import java.util.List;
+
+import static org.assertj.core.api.Assertions.assertThat;
 
 /**
  * @author Woonduk Kang(emeroad)
@@ -41,21 +42,21 @@ public class BatchConfigurationTest {
 
     @Test
     public void test() {
-        Assertions.assertEquals("release", configuration.getBatchEnv());
-        Assertions.assertEquals(Arrays.asList("1", "2"), configuration.getFlinkServerList());
+        assertThat(configuration)
+                .extracting(BatchConfiguration::getBatchEnv, BatchConfiguration::getFlinkServerList)
+                .containsExactly("release", List.of("1", "2"));
     }
 
     @Test
     public void cleanupInactiveAgentsConfigurationTest() {
         configuration.setup();
 
-        boolean enableCleanupInactiveAgents = configuration.isEnableCleanupInactiveAgents();
-        String cleanupInactiveAgentsCron = configuration.getCleanupInactiveAgentsCron();
-        int cleanupInactiveAgentsDurationDays = configuration.getCleanupInactiveAgentsDurationDays();
+        assertThat(configuration)
+                .extracting(BatchConfiguration::isEnableCleanupInactiveAgents,
+                        BatchConfiguration::getCleanupInactiveAgentsCron,
+                        BatchConfiguration::getCleanupInactiveAgentsDurationDays)
+                .containsExactly(false, "0 0 0 29 2 ?", 30);
 
-        Assertions.assertEquals(false, enableCleanupInactiveAgents);
-        Assertions.assertEquals("0 0 0 29 2 ?", cleanupInactiveAgentsCron);
-        Assertions.assertEquals(30, cleanupInactiveAgentsDurationDays);
     }
 
 }
