@@ -5,21 +5,21 @@ import com.navercorp.pinpoint.common.trace.AnnotationKey;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
+import java.util.List;
 
 public class AnnotationUtilsTest {
 
     @Test
     public void findApiAnnotation() {
         AnnotationBo annotationBo = new AnnotationBo(AnnotationKey.API.getCode(), "a");
-        String value = AnnotationUtils.findApiAnnotation(Collections.singletonList(annotationBo));
+        String value = AnnotationUtils.findApiAnnotation(List.of(annotationBo));
         Assertions.assertEquals("a", value);
     }
 
     @Test
     public void findApiAnnotation_invalidType() {
         AnnotationBo annotationBo = new AnnotationBo(AnnotationKey.API.getCode(), 1);
-        String value = AnnotationUtils.findApiAnnotation(Collections.singletonList(annotationBo));
+        String value = AnnotationUtils.findApiAnnotation(List.of(annotationBo));
         Assertions.assertNull(null, value);
     }
 }
