@@ -24,7 +24,6 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
 
@@ -49,7 +48,7 @@ public class JvmGcSamplerTest {
         long gcTime = randomGcTime() + previousGcTime;
         JvmGcBo jvmGcBo = createJvmGcBoForGcTest(gcCount, gcTime);
 
-        List<JvmGcBo> jvmGcBos = Arrays.asList(jvmGcBo);
+        List<JvmGcBo> jvmGcBos = List.of(jvmGcBo);
 
         // When
         SampledJvmGc sampledJvmGc = sampler.sampleDataPoints(0, System.currentTimeMillis(), jvmGcBos, previousJvmGcBo);
@@ -70,7 +69,7 @@ public class JvmGcSamplerTest {
         long gcTime = randomGcTime();
         JvmGcBo jvmGcBo = createJvmGcBoForGcTest(gcCount, gcTime);
 
-        List<JvmGcBo> jvmGcBos = Arrays.asList(jvmGcBo);
+        List<JvmGcBo> jvmGcBos = List.of(jvmGcBo);
 
         // When
         SampledJvmGc sampledJvmGc = sampler.sampleDataPoints(0, System.currentTimeMillis(), jvmGcBos, null);
@@ -99,7 +98,7 @@ public class JvmGcSamplerTest {
         JvmGcBo secondJvmGcBo = createJvmGcBoForGcTest(secondGcCount, secondGcTime);
 
         // must be in descending order
-        List<JvmGcBo> jvmGcBos = Arrays.asList(secondJvmGcBo, firstJvmGcBo);
+        List<JvmGcBo> jvmGcBos = List.of(secondJvmGcBo, firstJvmGcBo);
 
         // When
         SampledJvmGc sampledJvmGc = sampler.sampleDataPoints(0, System.currentTimeMillis(), jvmGcBos, previousJvmGcBo);
@@ -124,7 +123,7 @@ public class JvmGcSamplerTest {
         JvmGcBo secondJvmGcBo = createJvmGcBoForGcTest(secondGcCount, secondGcTime);
 
         // must be in descending order
-        List<JvmGcBo> jvmGcBos = Arrays.asList(secondJvmGcBo, firstJvmGcBo);
+        List<JvmGcBo> jvmGcBos = List.of(secondJvmGcBo, firstJvmGcBo);
 
         // When
         SampledJvmGc sampledJvmGc = sampler.sampleDataPoints(0, System.currentTimeMillis(), jvmGcBos, null);
@@ -163,7 +162,7 @@ public class JvmGcSamplerTest {
         JvmGcBo secondJvmGcBo_2 = createJvmGcBoForGcTest(secondAgentStartTimestamp, secondGcCount_2, secondGcTime_2);
 
         // must be in descending order
-        List<JvmGcBo> jvmGcBos = Arrays.asList(secondJvmGcBo_2, firstJvmGcBo_2, secondJvmGcBo_1, firstJvmGcBo_1);
+        List<JvmGcBo> jvmGcBos = List.of(secondJvmGcBo_2, firstJvmGcBo_2, secondJvmGcBo_1, firstJvmGcBo_1);
 
         // When
         SampledJvmGc sampledJvmGc = sampler.sampleDataPoints(0, System.currentTimeMillis(), jvmGcBos, previousJvmGcBo);
@@ -202,7 +201,7 @@ public class JvmGcSamplerTest {
         JvmGcBo secondJvmGcBo_2 = createJvmGcBoForGcTest(secondAgentStartTimestamp, secondGcCount_2, secondGcTime_2);
 
         // must be in descending order
-        List<JvmGcBo> jvmGcBos = Arrays.asList(secondJvmGcBo_2, firstJvmGcBo_2, secondJvmGcBo_1, firstJvmGcBo_1);
+        List<JvmGcBo> jvmGcBos = List.of(secondJvmGcBo_2, firstJvmGcBo_2, secondJvmGcBo_1, firstJvmGcBo_1);
 
         // When
         SampledJvmGc sampledJvmGc = sampler.sampleDataPoints(0, System.currentTimeMillis(), jvmGcBos, null);
@@ -238,7 +237,7 @@ public class JvmGcSamplerTest {
         JvmGcBo secondJvmGcBo = createJvmGcBoForGcTest(secondGcCount, secondGcTime);
 
         // must be in descending order
-        List<JvmGcBo> jvmGcBos = Arrays.asList(secondJvmGcBo, uncollectedJvmGcBo3, uncollectedJvmGcBo2, firstJvmGcBo, uncollectedJvmGcBo1);
+        List<JvmGcBo> jvmGcBos = List.of(secondJvmGcBo, uncollectedJvmGcBo3, uncollectedJvmGcBo2, firstJvmGcBo, uncollectedJvmGcBo1);
 
         // When
         SampledJvmGc sampledJvmGc = sampler.sampleDataPoints(0, System.currentTimeMillis(), jvmGcBos, previousJvmGcBo);
@@ -265,7 +264,7 @@ public class JvmGcSamplerTest {
         JvmGcBo secondJvmGcBo = createJvmGcBoForGcTest(secondGcCount, secondGcTime);
         JvmGcBo uncollectedJvmGcBo3 = createJvmGcBoForGcTest(JvmGcBo.UNCOLLECTED_VALUE, JvmGcBo.UNCOLLECTED_VALUE);
         // must be in descending order
-        List<JvmGcBo> jvmGcBos = Arrays.asList(uncollectedJvmGcBo3, secondJvmGcBo, uncollectedJvmGcBo2, uncollectedJvmGcBo1, firstJvmGcBo);
+        List<JvmGcBo> jvmGcBos = List.of(uncollectedJvmGcBo3, secondJvmGcBo, uncollectedJvmGcBo2, uncollectedJvmGcBo1, firstJvmGcBo);
 
         // When
         SampledJvmGc sampledJvmGc = sampler.sampleDataPoints(0, System.currentTimeMillis(), jvmGcBos, null);
@@ -295,7 +294,7 @@ public class JvmGcSamplerTest {
         JvmGcBo secondJvmGcBo = createJvmGcBoForGcTest(secondGcCount, secondGcTime);
 
         // must be in descending order
-        List<JvmGcBo> jvmGcBos = Arrays.asList(secondJvmGcBo, uncollectedJvmGcBo2, firstJvmGcBo, uncollectedJvmGcBo1);
+        List<JvmGcBo> jvmGcBos = List.of(secondJvmGcBo, uncollectedJvmGcBo2, firstJvmGcBo, uncollectedJvmGcBo1);
 
         // When
         SampledJvmGc sampledJvmGc = sampler.sampleDataPoints(0, System.currentTimeMillis(), jvmGcBos, previousJvmGcBo);
@@ -338,7 +337,7 @@ public class JvmGcSamplerTest {
         JvmGcBo uncollectedJvmGcBo2_2 = createJvmGcBoForGcTest(secondAgentStartTimestamp, JvmGcBo.UNCOLLECTED_VALUE, JvmGcBo.UNCOLLECTED_VALUE);
 
         // must be in descending order
-        List<JvmGcBo> jvmGcBos = Arrays.asList(
+        List<JvmGcBo> jvmGcBos = List.of(
                 uncollectedJvmGcBo2_2, thirdJvmGcBo_2, secondJvmGcBo_2, firstJvmGcBo_2, uncollectedJvmGcBo1_2,
                 uncollectedJvmGcBo2_1, firstJvmGcBo_1, uncollectedJvmGcBo1_1
         );
@@ -384,7 +383,7 @@ public class JvmGcSamplerTest {
         JvmGcBo uncollectedJvmGcBo2_2 = createJvmGcBoForGcTest(secondAgentStartTimestamp, JvmGcBo.UNCOLLECTED_VALUE, JvmGcBo.UNCOLLECTED_VALUE);
 
         // must be in descending order
-        List<JvmGcBo> jvmGcBos = Arrays.asList(
+        List<JvmGcBo> jvmGcBos = List.of(
                 uncollectedJvmGcBo2_2, thirdJvmGcBo_2, secondJvmGcBo_2, uncollectedJvmGcBo1_2, firstJvmGcBo_2,
                 uncollectedJvmGcBo2_1, firstJvmGcBo_1, uncollectedJvmGcBo1_1
         );
@@ -435,7 +434,7 @@ public class JvmGcSamplerTest {
         JvmGcBo uncollectedJvmGcBo2_2 = createJvmGcBoForGcTest(secondAgentStartTimestamp, JvmGcBo.UNCOLLECTED_VALUE, JvmGcBo.UNCOLLECTED_VALUE);
 
         // must be in descending order
-        List<JvmGcBo> jvmGcBos = Arrays.asList(
+        List<JvmGcBo> jvmGcBos = List.of(
                 uncollectedJvmGcBo2_2, thirdJvmGcBo_2, secondJvmGcBo_2, uncollectedJvmGcBo1_2, firstJvmGcBo_2,
                 uncollectedJvmGcBo2_1, secondJvmGcBo_1, firstJvmGcBo_1, uncollectedJvmGcBo1_1
         );
